css/style.css
/****** General ***********/
* {
    font-family: "Raleway", sans-serif;
    box-sizing: border-box;
    margin-top: 0;
}

:root {
    --main-color: #0065fc;
    --main-bg-color: #f2f2f2;
    --filter-bg-color: #deebff;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

a,
a:hover,
a:focus,
a:visited,
a:active {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 1.375em;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 1em;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color);
}

h1,
h2,
h3,
p {
    margin: 0;
}

/* header */

.top-nav {
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
}

.top-nav .logo {
    width: 61.09px;
    padding: 30px 0;
}

.liens {
    width: 244px;
    display: flex;
    justify-content: space-between;
}

.liens a,
.liens a:visited {
    position: relative;
    padding-top: 14px;
    background-color: white;
}

.liens a:hover {
    color: var(--main-color);
}

.liens a:hover::after {
    content: "";
    position: absolute;
    left: 0;
    top: 1px;
    width: 100%;
    height: 4px;
    background-color: var(--main-color);
}

.headline {
    margin-bottom: 35px;
}

.headline p {
    font-size: 1em;
    font-weight: 400;
}

header form {
    display: flex;
    margin-bottom: 35px;
}

form> svg {
    background-color: var(--main-bg-color);
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

form input[type="search"] {
    border: solid var(--main-bg-color);
    background-color: white;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    color: black;
    text-align: center;
    font-size: 1.125em;
    font-weight: 700;
    outline: none;
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
    display: none;
}

form input[type="submit"] {
    border-radius: 0px 15px 15px 0px;
    border: 1px solid var(--main-color);
    background: var(--main-color);
    padding: 15px 16px;
    color: white;
    text-align: center;
    font-size: 1.125em;
    font-weight: 700;
}

form .loupe {
    display: none;
}

.filterbar {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 15px;
    margin-bottom: 35px;
}

.filterbar>p {
    margin: 0;
    font-size: 18px;
    font-weight: 700;
}

.filter>a {
    border-radius: 25px;
    border: 2px solid #d9d9d9;
    padding: 10px 15px;
    display: flex;
    gap: 10px;
    align-items: center;
    font-size: 1em;
    font-weight: 700;
    font-size: 17px;
}

.filter a:hover,
a:focus {
    background: var(--filter-bg-color);
}

.filter {
    display: grid;
    grid-template-columns: repeat(4, auto);
    column-gap: 15px;
}

.infobar {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-bottom: 35px;
}

.infobar>svg {
    border: 1px solid #d9d9d9;
    border-radius: 50px;
    height: 25px;
    min-width: 25px;
}

.infobar p {
    margin: 0;
    font-size: 16px;
    flex-wrap: wrap;
}


/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
    margin-bottom: 35px;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

.hebergements .section-title {
    margin-bottom: 30px;
}

.hebergements-card .card {
    padding: 0;
    padding-bottom: 15px;
    display: flex;
    flex-direction: column;
    height: 100%;
}

.hebergements-card img {
    height: 124px;
    width: 100%;
    border-radius: 20px 20px 0px 0px;
    padding: 5px;
    margin-bottom: 4px;
}

.hebergements-card .content {
    display: flex;
    padding: 0px 15px;
    flex-direction: column;
    gap: 8px;
}

.hebergements-card .card-rating {
    padding: 8px 15px 0;
}

.hebergements-card .frame-heberge {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 30px;
    margin-bottom: 30px;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/* Actvite */

.activite {
    padding: 30px;
    margin-bottom: 35px;
}

.activite .section-title {
    margin-bottom: 30px;
}

.activite .frame-activite {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 30px;
}

.frame-activite > a {
  display: block;
  height: 100%;
  border-radius: 20px;
}

.frame-activite .card {
    height: 100%;
    padding: 0;
    display: flex;
    flex-direction: column;
    gap: 0;
}

.frame-activite .card img {
    width: 100%;
    height: 380px;
    flex-shrink: 0;
    border-radius: 20px 20px 0 0;
}

.frame-activite .card .card-title {
    padding: 20px 19px;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* Footer */

.frame-footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
}

.frame-footer .card .card-title {
    font-size: 1.125em;
}

.frame-footer .card {
    display: flex;
    flex-direction: column;
    padding: 20px;
    gap: 15px;
    border-radius: 0;
    background-color: var(--main-bg-color);
    filter: none;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {

    .filterbar {
        flex-direction: column;
        align-items: flex-start;
    }

    .filter a {
        font-size: 16px;
    }

    .frame-activite .card img {
        height: 200px;
    }

    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards>a {
        width: 30%;
    }

    .card-title {
        font-size: 0.875em;
    }

    .card-subtitle {
        font-size: 0.8125em;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {

    /* ... */

    body {
        margin: 0;
    }

    .main-container {
        padding: 0;
    }

    .top-nav {
        flex-direction: column;

    }

    .top-nav img {
        order: 1;
        display: block;
        margin: 0 auto;
    }

    .top-nav .liens {
        order: 2;
        display: grid;
        grid-template-columns: 1fr 1fr;
        width: 100%;
    }

    .liens>a {
        padding: 0 0 14px;
        text-align: center;
    }

    .liens>a:hover::after {
        top: auto;
        bottom:2px;
    }

    .infogroup {
        padding: 0 20px;
    }

    form input[type="submit"] {
        display: none;
    }

    form .loupe {
        display: block;
        position: absolute;
        right: 20px;
        padding: 15px 16px;
        border-radius: 15px;
        border: 1px solid var(--main-color);
        background: var(--main-color);
        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    }

    form input[type="search"] {
        width: 100%;
    }

    .filter {
        grid-template-columns: repeat(2,1fr);
        row-gap: 20px;
        width: 100%;
    }

    .filter>a {
        font-size: 14px;
        padding: 10px 12px;
    }

    .section-title {
        font-size: 22px;
    }

    .card-title {
        font-size: 16px;
    }

    .card-subtitle {
        font-size: 14px;
    }

    .hebergements-and-populaires .hebergements {
        order: 2;
        border-radius: 0;
        background-color: transparent;
        padding: 20px;
    }

    .hebergements-and-populaires .populaires {
        order: 1;
        border-radius: 0;
        margin:0 0 15px;
    }

    .populaires-cards {
        flex-direction: column;
    }

    .populaires-cards a {
        width: 100%;
    }

    .hebergements .section-title{
        margin-bottom: 15px;
    }

    .hebergements-card .frame-heberge{
        grid-template-columns: 1fr;
        grid-template-rows: repeat(3,1fr);
        row-gap: 15px;
        margin-bottom: 15px;
    }

    .hebergements-card + h3 {
        font-size: 18px;
    }

    .activite .frame-activite {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(4,1fr);
        row-gap: 15px;
    }

    .frame-footer {
        grid-template-columns: 1fr;
        grid-template-rows: repeat(3, 1fr);
    }

    .frame-footer .card {
        padding: 30px;
    }

}

